--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@
     </header>
     <!-- end of header  -->
 
-    <div class="vv">
-        i am eva beniger;!!!!!!!!!!!!!!
-    </div>
+    <!-- icon-section -->
+<section id="icon-section">
+    <a href=""><i class="fa fa-home"></i></a>
+    <a href=""><i class="fa fa-book"></i></a>
+    <a href=""><i class="fa fa-coffee"></i></a>
+    <a href=""><i class="fa fa-anchor"></i></a>
+</section>
+
+    <!-- end of icon-section -->
+
 
     <!-- jquery cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
