--- a/index.html
+++ b/index.html
@@ -55,6 +55,56 @@
 
     <!-- end of icon-section -->
 
+    <!-- skills -->
+    <section id="skills">
+        <!-- title -->
+        <div class="title">
+            <div class="title-icon">
+                <i class="fa fa-gears"></i>
+            </div>
+            <div class="title-text">
+                <h2 class="title-heading">skills we provide</h2>
+                <p class="title-subheading">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <!-- end of title -->
+        <div class="skills-center">
+            <article class="skill">
+                <i class="fa fa-apple"></i>
+                <h3>apple</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita</p>
+            </article>
+            <article class="skill">
+                <i class="fa fa-google"></i>
+                <h3>google</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita</p>
+            </article>
+            <article class="skill">
+                <i class="fa fa-android"></i>
+                <h3>android</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita</p>
+            </article>
+            <article class="skill">
+                <i class="fa fa-gear"></i>
+                <h3>tools</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita</p>
+            </article>
+        </div>
+    </section>
+    <!-- end of skills -->
+
+    <!-- form section -->
+        <section id="form">
+            <div class="form-content">
+                <h1 class="form-title">subcribe here</h1>
+                <form>
+                    <input type="email" id="email" name="email" placeholder="your email">
+                    <input type="submit" value="submit">
+                </form>
+            </div>
+        </section>
+    <!-- end of form section -->
+
 
     <!-- jquery cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
